--- a/manifest.json
+++ b/manifest.json
@@ -36,6 +36,9 @@
                 "jquery-3.4.1.min.js",
                 "utility.js",
                 "loggerinc.js"
+            ],
+            "css": [
+                "gamelogsaver.css"
             ]
         }
     ]
